@@ -31,4 +31,6 @@ test_mmap
   Modifying copy-on-write memory map.
   Ensuring copy-on-write maps cannot be resized.
   Ensuring invalid access parameter raises exception.
+  Ensuring that passing 0 as map length sets map size to current file size.
+  Ensuring that passing 0 as map length sets map size to current file size.
  Test passed
